<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingClass"
        tools:context=".login.SignUpFragment" >


        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Any"
            android:textSize="34dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView38"
            app:layout_constraintEnd_toStartOf="@+id/textView38"
            app:layout_constraintTop_toTopOf="@+id/textView38" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="G"
            android:textColor="@color/pink"
            android:textSize="34dp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ift"
            android:textSize="34dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView38"
            app:layout_constraintStart_toEndOf="@+id/textView38"
            app:layout_constraintTop_toTopOf="@+id/textView38" />

        <TextView
            android:id="@+id/SignUp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/SignUp_textInput_Finame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView38"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Please enter your details:"
            app:layout_constraintStart_toStartOf="@+id/SignUp_text_view"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_text_view" />

        <View
            android:id="@+id/sign_up_line"
            style="@style/line"
            android:layout_width="0dp"
            android:layout_marginEnd="-32dp"
            android:background="@color/grey_1"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_textInput_Finame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="88dp"
            android:hint="@string/First_Name"
            android:textColorHint="@color/grey_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_text_view"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUp_firstName_input"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_textInputnput_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textColorHint="@color/grey_1"
            app:layout_constraintEnd_toEndOf="@+id/SignUp_textInput_Phone"
            app:layout_constraintStart_toStartOf="@+id/SignUp_textInput_Phone"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textInput_Phone"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUp_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/SignUp_check_box"
            android:layout_width="268dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="I agree to the Terms of Services and Privacy Policy."
            app:layout_constraintStart_toStartOf="@+id/SignUp_textInput_Password"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textInput_Password"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/SignUp_continue_btn"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_border_radious_25_blue"
            android:text="Create Account"
            android:textColor="@color/pink"
            app:layout_constraintEnd_toEndOf="@+id/SignUp_textInput_Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_check_box"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/SignUp_signIn_btn"
            android:layout_width="81dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_border_8sp_pink"
            android:text="Sign In"
            android:textColor="@color/blue_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/SignUp_check_box"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_continue_btn"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_textInput_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:textColorHint="@color/grey_1"
            app:layout_constraintEnd_toEndOf="@+id/SignUp_textInputnput_Email"
            app:layout_constraintStart_toStartOf="@+id/SignUp_textInputnput_Email"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textInput_address"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUp_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_textInput_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:textColorHint="@color/grey_1"
            app:layout_constraintStart_toStartOf="@+id/SignUp_textInputnput_Email"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textInputnput_Email"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUp_address_input"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_textInput_Phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Phone"
            android:textColorHint="@color/grey_1"
            app:layout_constraintEnd_toEndOf="@+id/SIgnUp_textInput_Lname"
            app:layout_constraintStart_toStartOf="@+id/SignUp_textInput_Finame"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_textInput_Finame"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUp_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="phone"
                android:maxLines="1"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SIgnUp_textInput_Lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/Last_Name"
            android:textColorHint="@color/grey_1"
            app:layout_constraintBottom_toBottomOf="@+id/SignUp_textInput_Finame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/SignUp_textInput_Finame"
            app:layout_constraintTop_toTopOf="@+id/SignUp_textInput_Finame"
            tools:ignore="MissingConstraints,NotSibling">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignUp_lastName_input"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/SignUp_btn_find_addres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_radious_8dp_purpel_200"
            android:text="Find"
            android:textColor="@color/purple_dark"
            app:layout_constraintBottom_toBottomOf="@+id/SignUp_textInput_address"
            app:layout_constraintEnd_toEndOf="@+id/SignUp_textInputnput_Email"
            app:layout_constraintStart_toEndOf="@+id/SignUp_textInput_address"
            app:layout_constraintTop_toTopOf="@+id/SignUp_textInput_address" />

        <Button
            android:id="@+id/signup_facebook_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_radious_8dp_blue"
            android:text="  Sign Up with facebook  "
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/SignUp_textInput_Password"
            app:layout_constraintTop_toTopOf="@+id/SignUp_signIn_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
